--- a/package.json
+++ b/package.json
@@ -19,20 +19,30 @@
     "babel-plugin-root-import": "^6.6.0",
     "browser-sync": "^2.27.7",
     "browsersync-ssi": "^0.2.4",
+    "concurrent-transform": "^1.0.0",
     "cssnano": "^5.0.17",
     "del": "^6.0.0",
+    "gm": "^1.25.0",
+    "group-css-media-queries": "^1.4.1",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.3",
     "gulp-concat": "^2.6.1",
+    "gulp-filter": "^9.0.1",
     "gulp-format-html": "^1.5.2",
+    "gulp-gm": "^0.0.9",
+    "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-webp": "^4.0.1",
+    "imagemagick": "^0.1.3",
     "imagemin-pngquant": "^9.0.2",
+    "os": "^0.1.2",
     "postcss": "^8.4.21",
+    "postcss-sort-media-queries": "^5.2.0",
     "sass": "^1.49.7",
     "terser-webpack-plugin": "^5.3.1",
     "vinyl-named": "^1.1.0",
